--- a/configurations/model/token-bert.yaml
+++ b/configurations/model/token-bert.yaml
@@ -1,11 +1,9 @@
 _target_: 'classy.pl_modules.hf.HFTokensPLModule'
 transformer_model: ${transformer_model}
-use_last_n_layers: 4
+use_last_n_layers: 1
 fine_tune: False
-optim_conf:
-  _target_: classy.optim.factories.RAdamWithDecayFactory
-  lr: 1e-5
-  weight_decay: 0.01
-  no_decay_params:
-    - bias
-    - LayerNorm.weight
+optim:
+  _target_: "src.optim.factories.TorchFactory"
+  optimizer:
+    _target_: torch.optim.Adam
+    lr: 1e-5
