--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 # torch tested against torch=1.9.0
-pytorch-lightning==1.4.4
+pytorch-lightning==1.4.5
 transformers==4.9.2
 hydra-core==1.1.1
+datasets==1.11.0
+seqeval==1.2.2
 # black
 black==21.8b0
