--- a/configurations/sent-pair-bert.yaml
+++ b/configurations/sent-pair-bert.yaml
@@ -20,9 +20,9 @@ hydra:
 # defaults
 defaults:
   - callbacks: default
-  - data: sequence-hf
+  - data: sent-pair-hf
   - device: cuda
   - model: sequence-bert
-  - prediction: sequence-hf
+  - prediction: sent-pair-hf
   - training: default
   - _self_
