--- a/configurations/sent-pair-bert.yaml
+++ b/configurations/sent-pair-bert.yaml
@@ -19,7 +19,7 @@ hydra:
 
 # defaults
 defaults:
-  - callbacks: default
+  - callbacks: empty
   - data: sent-pair-hf
   - device: cuda
   - model: sequence-bert
