--- a/configurations/model/token-bert.yaml
+++ b/configurations/model/token-bert.yaml
@@ -2,7 +2,7 @@ _target_: 'classy.pl_modules.hf.HFTokensPLModule'
 transformer_model: ${transformer_model}
 use_last_n_layers: 1
 fine_tune: False
-optim:
+optim_conf:
   _target_: "src.optim.factories.TorchFactory"
   optimizer:
     _target_: torch.optim.Adam
