sentence pair fix

--- a/configurations/sentence-pair-bert.yaml
+++ b/configurations/sentence-pair-bert.yaml
@@ -21,9 +21,9 @@ hydra:
 # defaults
 defaults:
   - callbacks: empty
-  - data: sent-pair-hf
+  - data: sentence-pair-hf
   - device: cuda
-  - model: sequence-bert
-  - prediction: sent-pair-hf
+  - model: sentence-pair-bert
+  - prediction: sentence-pair-hf
   - training: default
   - _self_
