--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,8 @@ hydra-core==1.1.1
 # datasets and metrics
 datasets==1.11.0
 seqeval==1.2.2
+scikit-learn==0.24.2
+matplotlib==3.4.3
 # serve
 fastapi==0.68.1
 uvicorn[standard]==0.15.0
