--- a/requirements.txt
+++ b/requirements.txt
@@ -7,8 +7,10 @@ datasets==1.11.0
 seqeval==1.2.2
 scikit-learn==0.24.2
 matplotlib==3.4.3
-# serve
+# web
 fastapi==0.68.1
 uvicorn[standard]==0.15.0
+streamlit==0.88.0
+st-annotated-text==2.0.0
 # black
 black==21.8b0
