--- a/.gitignore
+++ b/.gitignore
@@ -136,3 +136,17 @@ dmypy.json
 data/*
 experiments/*
 !.placeholder
+
+# docs stuff
+docs/node_modules
+docs/build
+docs/.docusaurus
+docs/.cache-loader
+docs/.DS_Store
+docs/.env.local
+docs/.env.development.local
+docs/.env.test.local
+docs/.env.production.local
+docs/npm-debug.log*
+docs/yarn-debug.log*
+docs/yarn-error.log*
