--- a/configurations/data/sentence-pair-hf.yaml
+++ b/configurations/data/sentence-pair-hf.yaml
@@ -12,7 +12,18 @@ datamodule:
     section_size: 10000
     prebatch: True
     shuffle: True
-    for_inference: False  # todo apply to validation as well?
+    for_inference: False
+  validation_dataset:
+    _target_: 'classy.data.dataset.hf.HFSentencePairDataset.from_file'
+    transformer_model: ${transformer_model}
+    min_length: 5
+    max_length: 500
+    tokens_per_batch: 800
+    max_batch_size: 10
+    section_size: 10000
+    prebatch: True
+    shuffle: False
+    for_inference: True
   validation_split_size: 0.1
   test_split_size: 0.1
   max_nontrain_split_size: 500
