bug fix on optimizer instantiation

--- a/configurations/model/token-bert.yaml
+++ b/configurations/model/token-bert.yaml
@@ -3,7 +3,9 @@ transformer_model: ${transformer_model}
 use_last_n_layers: 1
 fine_tune: False
 optim_conf:
-  _target_: "src.optim.factories.TorchFactory"
-  optimizer:
-    _target_: torch.optim.Adam
-    lr: 1e-5
+  _target_: classy.optim.factories.RAdamWithDecayFactory
+  lr: 1e-5
+  weight_decay: 0.01
+  no_decay_params:
+    - bias
+    - LayerNorm.weight
