--- a/configurations/profiles/small.yaml
+++ b/configurations/profiles/small.yaml
@@ -6,7 +6,7 @@ transformer_model: distilbert-base-cased
 # MODEL PARAMS
 model:
   optim_conf:
-    _target_: classy.optim.factories.AdagradFactory
+    _target_: classy.optim.factories.AdafactorWithWarmupFactory
     lr: 1e-5
     warmup_steps: 5000
     total_steps: ${training.pl_trainer.max_steps}
