bug fix on the optimizers targets

--- a/configurations/model/token.yaml
+++ b/configurations/model/token.yaml
@@ -3,7 +3,7 @@ transformer_model: ${transformer_model}
 use_last_n_layers: 1
 fine_tune: False
 optim_conf:
-  _target_: classy.optim.factories.RAdamWithDecayFactory
+  _target_: classy.optim.factories.RAdamFactory
   lr: 1e-5
   weight_decay: 0.01
   no_decay_params:
