--- a/configurations/callbacks/summarization.yaml
+++ b/configurations/callbacks/summarization.yaml
@@ -2,7 +2,7 @@ callbacks:
   - _target_: "classy.pl_callbacks.prediction.PredictionPLCallback"
     prediction_confs:
       - name: "cnn-dm"
-        path: "data/cnn-dm/validation.tsv"  # todo terrible hardcoded path
+        path: null
         token_batch_size: 800
         prediction_param_conf_path: "configurations/prediction-params/generation-beam.yaml"
         limit: 1000
