--- a/configurations/model/token.yaml
+++ b/configurations/model/token.yaml
@@ -1,7 +1,7 @@
 _target_: 'classy.pl_modules.hf.classification.HFTokensPLModule'
 transformer_model: ${transformer_model}
 use_last_n_layers: 1
-fine_tune: False
+fine_tune: True
 optim_conf:
   _target_: classy.optim.factories.RAdamFactory
   lr: 1e-5
