--- a/configurations/profiles/deberta-base.yaml
+++ b/configurations/profiles/deberta-base.yaml
@@ -8,22 +8,21 @@ supported_tasks:
   - token
 
 # global params
-transformer_model: bert-base-cased
+transformer_model: microsoft/deberta-base
 
 # trainer
 pl_trainer:
   _target_: pytorch_lightning.Trainer
   accumulate_grad_batches: 1
+  gradient_clip_val: 1.0
   val_check_interval: 1.0
   max_steps: 100_000
 
 # MODEL PARAMS
 model:
   optim_conf:
-    _target_: classy.optim.factories.AdamWWithWarmupFactory
+    _target_: classy.optim.factories.RAdamFactory
     lr: 3e-5
-    warmup_steps: 5000
-    total_steps: ${training.pl_trainer.max_steps}
     weight_decay: 0.01
     no_decay_params:
       - bias
