--- a/configurations/callbacks/summarization.yaml
+++ b/configurations/callbacks/summarization.yaml
@@ -1,11 +1,19 @@
 callbacks:
   - _target_: "classy.pl_callbacks.prediction.PredictionPLCallback"
     prediction_confs:
-      - name: "cnn-dm"
+      - name: "validation"
         path: null
         token_batch_size: 800
         prediction_param_conf_path: "configurations/prediction-params/generation-beam.yaml"
         limit: 1000
+        enabled_prediction_callbacks:
+          - "file_dumper"
+          - "rouge"
+      - name: "test"
+        path: null
+        token_batch_size: 800
+        prediction_param_conf_path: "configurations/prediction-params/generation-beam.yaml"
+        limit: -1
         enabled_prediction_callbacks:
           - "file_dumper"
           - "rouge"
