--- a/configurations/callbacks/squad.yaml
+++ b/configurations/callbacks/squad.yaml
@@ -1,14 +1,17 @@
 callbacks:
   - _target_: "classy.pl_callbacks.prediction.PredictionPLCallback"
+    validation_path: null
     prediction_confs:
-      - name: "file-dumper"
+      - name: "validation"
         path: null
-        token_batch_size: 400
-        prediction_param_conf_path: "configurations/prediction-params/generation-beam.yaml"
+        token_batch_size: 800
         limit: 1000
         enabled_prediction_callbacks:
           - "file_dumper"
+          - "sacrebleu"
     prediction_callbacks:
       file_dumper:
         _target_: "classy.pl_callbacks.prediction.FileDumperPredictionCallback"
+      sacrebleu:
+        _target_: "classy.pl_callbacks.prediction.SQuADV1Callback"
     prediction_dataset_conf: ${prediction.dataset}
