--- a/configurations/callbacks/conll2003.yaml
+++ b/configurations/callbacks/conll2003.yaml
@@ -1,8 +1,9 @@
 callbacks:
   - _target_: "classy.pl_callbacks.prediction.PredictionPLCallback"
+    validation_path: null
     prediction_confs:
-      - name: "seqeval"
-        path: null
+      - name: "validation"
+        path: null  # if you leave it to None, it will be set to the validation path
         token_batch_size: 300
         limit: -1
         enabled_prediction_callbacks:
