--- a/configurations/profiles/bart-base.yaml
+++ b/configurations/profiles/bart-base.yaml
@@ -3,15 +3,15 @@ supported_tasks:
   - sentence-pair
   - sequence
   - token
+  - generation
 
 # global params
-transformer_model: microsoft/deberta-large
+transformer_model: facebook/bart-base
 
 # trainer
 training:
   pl_trainer:
     accumulate_grad_batches: 1
-    gradient_clip_val: 1.0
     val_check_interval: 1.0
     max_steps: 100_000
 
@@ -19,7 +19,7 @@ training:
 model:
   optim_conf:
     _target_: classy.optim.factories.RAdamFactory
-    lr: 5e-6
+    lr: 1e-5
     weight_decay: 0.01
     no_decay_params:
       - bias
