--- a/configurations/data/generation.yaml
+++ b/configurations/data/generation.yaml
@@ -5,6 +5,7 @@ datamodule:
   train_dataset:
     _target_: 'classy.data.dataset.hf.generation.HFGenerationDataset.from_file'
     transformer_model: ${transformer_model}
+    additional_special_tokens: ${model.additional_special_tokens}
     min_length: -1
     max_length: 500
     tokens_per_batch: 1000
@@ -16,6 +17,7 @@ datamodule:
   validation_dataset:
     _target_: 'classy.data.dataset.hf.generation.HFGenerationDataset.from_file'
     transformer_model: ${transformer_model}
+    additional_special_tokens: ${model.additional_special_tokens}
     min_length: -1
     max_length: 500
     tokens_per_batch: 1000
