--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 # torch tested against torch=1.9.0
 pytorch-lightning==1.4.5
-transformers>=4.10.0
+transformers==4.11.3
 hydra-core==1.1.1
 # datasets and metrics
 datasets==1.11.0
