--- a/configurations/token.yaml
+++ b/configurations/token.yaml
@@ -1,6 +1,6 @@
 task: token
 project_name: classy
-exp_name: ???
+exp_name: null
 exp_folder: ./experiments/${exp_name}
 
 transformer_model: "bert-base-cased"
