--- a/configurations/generation.yaml
+++ b/configurations/generation.yaml
@@ -1,6 +1,6 @@
 task: generation
 project_name: classy
-exp_name: ???
+exp_name: null
 exp_folder: ./experiments/${exp_name}
 
 transformer_model: "facebook/bart-base"
