--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
 # torch tested against torch=1.9.0
 pytorch-lightning==1.4.5
-transformers>=4.10.0
+transformers==4.11.0
 hydra-core==1.1.1
 # datasets and metrics
-datasets==1.11.0
+datasets==1.12.1
 seqeval==1.2.2
 scikit-learn==0.24.2
 matplotlib==3.4.3
