--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,10 +7,10 @@ on:
   push:
     branches:
       - main
-#  release:
-#    types: [published]
-#  schedule:
-#    - cron: '37 11 * * 1,2,3,4,5'  # early morning (11:37 UTC / 4:37 AM PDT) Monday - Friday
+  release:
+    types: [published]
+  schedule:
+    - cron: '00 04 * * *'  # early morning (04:00 UTC) every day
 
 jobs:
   build:
@@ -60,7 +60,7 @@ jobs:
   publish:
     name: Publish to PyPI
     needs: [build]
-    if: (github.repository == 'sunglasses-ai/classy')  # && (github.event_name == 'release' || github.event == 'schedule'))
+    if: (github.repository == 'sunglasses-ai/classy') && (github.event_name == 'release' || github.event == 'schedule'))
     runs-on: ubuntu-latest
 
     steps:
