--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -60,7 +60,7 @@ jobs:
   publish:
     name: Publish to PyPI
     needs: [build]
-    if: (github.repository == 'sunglasses-ai/classy') && (github.event_name == 'release' || github.event == 'schedule'))
+    if: (github.repository == 'sunglasses-ai/classy') && (github.event_name == 'release' || github.event == 'schedule')
     runs-on: ubuntu-latest
 
     steps:
