--- a/configurations/data/sentence-pair.yaml
+++ b/configurations/data/sentence-pair.yaml
@@ -5,6 +5,7 @@ datamodule:
   train_dataset:
     _target_: 'classy.data.dataset.hf.classification.HFSentencePairDataset.from_file'
     transformer_model: ${transformer_model}
+    additional_special_tokens: ${model.additional_special_tokens}
     min_length: 5
     max_length: 500
     tokens_per_batch: 800
@@ -16,6 +17,7 @@ datamodule:
   validation_dataset:
     _target_: 'classy.data.dataset.hf.classification.HFSentencePairDataset.from_file'
     transformer_model: ${transformer_model}
+    additional_special_tokens: ${model.additional_special_tokens}
     min_length: 5
     max_length: 500
     tokens_per_batch: 800
