--- a/configurations/model/sentence-pair.yaml
+++ b/configurations/model/sentence-pair.yaml
@@ -1,5 +1,6 @@
 _target_: 'classy.pl_modules.hf.classification.HFSentencePairPLModule'
 transformer_model: ${transformer_model}
+additional_special_tokens: []
 optim_conf:
   _target_: classy.optim.factories.RAdamFactory
   lr: 1e-5
