--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -1,8 +1,8 @@
-name: Build and Deploy
+name: Build and Deploy Docs
 on:
-  push:
-    branches:
-      - docs
+#   push:
+#     branches:
+#       - docs
   workflow_dispatch:
 
 jobs:
