initial eval skeleton

--- a/configurations/token.yaml
+++ b/configurations/token.yaml
@@ -26,6 +26,7 @@ defaults:
   - callbacks: empty
   - data: token
   - device: cuda
+  - evaluation: token
   - model: token
   - prediction: token
   - training: default
