--- a/configurations/qa.yaml
+++ b/configurations/qa.yaml
@@ -26,6 +26,7 @@ defaults:
   - callbacks: empty
   - data: qa
   - device: cuda
+  - evaluation: qa
   - model: qa
   - prediction: qa
   - training: default
