--- a/configurations/prediction/token.yaml
+++ b/configurations/prediction/token.yaml
@@ -1,7 +1,7 @@
 dataset:
   _target_: 'classy.data.dataset.hf.classification.HFTokenDataset.from_samples'
   transformer_model: ${transformer_model}
-  additional_special_tokens: ${model.additional_special_tokens}
+  additional_special_tokens: "${oc.select:'model.additional_special_tokens',${oc.decode:'[]'}}"
   min_length: -1
   max_length: -1
   tokens_per_batch: 800
