--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -1,8 +1,8 @@
 name: Build and Deploy Docs
 on:
-#   push:
-#     branches:
-#       - docs
+  push:
+    branches:
+      - master
   workflow_dispatch:
 
 jobs:
@@ -11,8 +11,6 @@ jobs:
     steps:
       - name: Checkout Docs
         uses: actions/checkout@v2.3.1
-        with:
-          ref: docs
 
       - name: Set up Node
         uses: actions/setup-node@v2
