--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,7 +10,7 @@ on:
   release:
     types: [published]
   schedule:
-    - cron: '30 08 * * *'  # early morning (04:00 UTC) every day
+    - cron: '00 04 * * *'  # early morning (04:00 UTC) every day
 
 jobs:
   check_date:
@@ -29,7 +29,7 @@ jobs:
   build:
     needs: [check_date]
     if: ${{ github.event_name == 'release' || needs.check_date.outputs.WAS_EDITED == 'true' }}
-    
+
     name: Build Package
 
     runs-on: ubuntu-latest
@@ -54,6 +54,7 @@ jobs:
       run: |
         # You can't set env variables to bash commands, we need
         # to export them this way instead.
+        if: github.event_name == 'schedule'
         echo "CLASSY_VERSION_SUFFIX=dev$(date -u +%Y%m%d)" >> $GITHUB_ENV
 
     - name: Build wheel
