--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,6 +39,7 @@ jobs:
       run: |
         # You can't set env variables to bash commands, we need
         # to export them this way instead.
+        if: github.event_name == 'schedule'
         echo "CLASSY_VERSION_SUFFIX=dev$(date -u +%Y%m%d)" >> $GITHUB_ENV
 
     - name: Build wheel
@@ -60,7 +61,7 @@ jobs:
   publish:
     name: Publish to PyPI
     needs: [build]
-    if: (github.repository == 'sunglasses-ai/classy') && (github.event_name == 'release' || github.event == 'schedule')
+    if: (github.repository == 'sunglasses-ai/classy') && (github.event_name == 'release' || github.event_name == 'schedule')
     runs-on: ubuntu-latest
 
     steps:
