--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,6 +14,8 @@ jobs:
       WAS_EDITED: ${{ steps.check_date.outputs.WAS_EDITED }}
     steps:
       - uses: actions/checkout@v2
+        with:
+          ref: develop
 
       - id: check_date
         name: Check if there were commits in the last day
@@ -29,6 +31,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
+      with:
+        ref: develop
 
     - name: Setup Python
       uses: actions/setup-python@v2
@@ -75,6 +79,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+      with:
+        ref: develop
 
     - name: Setup Python
       uses: actions/setup-python@v2
