--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -22,8 +22,8 @@ jobs:
           pip install -r requirements.txt
           pip install pdoc3
           pdoc -f --template-dir docs/pdoc-templates -o docs/docs classy
-          rm docs/docs/classy/version.md
           mv docs/docs/classy docs/docs/api
+          python docs/pdoc/pdoc_postprocess.py
 
       - name: Set up Node
         uses: actions/setup-node@v2
