small fixes (rich is required + announcement update)

--- a/requirements.txt
+++ b/requirements.txt
@@ -21,3 +21,4 @@ wandb==0.12.2  # required for logging
 nltk==3.6.5
 rouge-score==0.0.4  # required by rouge callback
 sacrebleu==1.4.12  # required by sacrebleu callback
+rich==11.0.0
