--- a/requirements.txt
+++ b/requirements.txt
@@ -22,3 +22,4 @@ nltk==3.6.5
 rouge-score==0.0.4  # required by rouge callback
 sacrebleu==1.4.12  # required by sacrebleu callback
 rich==11.0.0
+plotly==5.5.0
