--- a/configurations/callbacks/evaluation.yaml
+++ b/configurations/callbacks/evaluation.yaml
@@ -8,7 +8,7 @@
       _target_: "classy.pl_callbacks.prediction.EvaluationPredictionCallback"
       evaluation: ${evaluation}
   settings:
-    - name: "validation"
+    - name: "val"
       path: null  # leave it to null to set it to PredictionPLCallback.path
       token_batch_size: 800
       prediction_param_conf_path: null
