[conf] validation and prediction dataset now inferred (+ bug fix on generation)

--- a/configurations/generation.yaml
+++ b/configurations/generation.yaml
@@ -28,7 +28,7 @@ defaults:
   - device: cuda
   - evaluation: generation
   - model: generation
-  - prediction: generation
+  - prediction: default
   - training: default
   - logging: default
   - _self_
