--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-torch>=1.9,<1.11
+torch>=1.9
 pytorch-lightning>=1.5.0,<1.6.0
 torchmetrics>=0.5.0,<0.8.0
 transformers>=4.1,<4.18
@@ -9,7 +9,6 @@ argcomplete==1.12.3
 wandb>=0.12.0
 # data and metrics
 datasets>=1.12,<1.19
-scikit-learn>1.0.0,<2.0.0
 nltk>=3.4.5,<4.0.0
 seqeval==1.2.*  # required by span callback
 rouge-score==0.0.4  # required by rouge callback
