--- a/configurations/data/generation.yaml
+++ b/configurations/data/generation.yaml
@@ -5,9 +5,10 @@ datamodule:
   dataset:
     _target_: "${resolve_hf_generation_base_dataset_on_transformer_model:${transformer_model}}"
     transformer_model: ${transformer_model}
+    truncation: true
     additional_special_tokens: "${oc.select:'model.additional_special_tokens',${oc.decode:'[]'}}"
-    min_length: -1
-    max_length: 500
+    min_length: 5
+    max_length: 512
     tokens_per_batch: 1000
     max_batch_size: 10
     section_size: 10000
